--- a/index.html
+++ b/index.html
@@ -1,133 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vibe Calendar</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Vibe Calendar</title>
 
-  <link rel="manifest" href="./manifest.json" />
-  <meta name="theme-color" content="#111827" />
+    <link rel="manifest" href="./manifest.json" />
+    <meta name="theme-color" content="#111827" />
 
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-    }
-    header {
-      padding: 16px;
-      text-align: center;
-      font-size: 1.2rem;
-      background: #020617;
-    }
-    .calendar {
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-      gap: 6px;
-      padding: 12px;
-    }
-    .day {
-      background: #020617;
-      border-radius: 8px;
-      padding: 10px;
-      min-height: 60px;
-      cursor: pointer;
-    }
-    .day:hover {
-      background: #1e293b;
-    }
-    .day small {
-      opacity: 0.6;
-      font-size: 0.7rem;
-    }
-    .event {
-      margin-top: 4px;
-      font-size: 0.75rem;
-      background: #2563eb;
-      padding: 2px 4px;
-      border-radius: 4px;
-    }
-  </style>
+    <style>
+        body {
+            margin: 0;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+            background: #0f172a;
+            color: #e5e7eb;
+        }
+
+        header {
+            padding: 16px;
+            text-align: center;
+            font-size: 1.2rem;
+            background: #020617;
+        }
+
+        .calendar {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 6px;
+            padding: 12px;
+        }
+
+        .day {
+            background: #020617;
+            border-radius: 8px;
+            padding: 10px;
+            min-height: 60px;
+            cursor: pointer;
+        }
+
+        .day:hover {
+            background: #1e293b;
+        }
+
+        .day small {
+            opacity: 0.6;
+            font-size: 0.7rem;
+        }
+
+        .event {
+            margin-top: 4px;
+            font-size: 0.75rem;
+            background: #2563eb;
+            padding: 2px 4px;
+            border-radius: 4px;
+        }
+    </style>
 </head>
 
 <body>
-  <header id="title"></header>
-  <div class="calendar" id="calendar"></div>
+    <header id="title"></header>
+    <div class="calendar" id="calendar"></div>
 
-  <script>
-    // ---- SAFE INIT (important for installed PWAs)
-    window.addEventListener("DOMContentLoaded", () => {
-      renderCalendar();
-    });
+    <script>
+        // ---- SAFE INIT (important for installed PWAs)
+        window.addEventListener("DOMContentLoaded", () => {
+            renderCalendar();
+        });
 
-    const STORAGE_KEY = "vibe-calendar-events";
+        const STORAGE_KEY = "vibe-calendar-events-v1";
 
-    function getEvents() {
-      try {
-        return JSON.parse(localStorage.getItem(STORAGE_KEY)) || {};
-      } catch {
-        return {};
-      }
-    }
-
-    function saveEvents(events) {
-      localStorage.setItem(STORAGE_KEY, JSON.stringify(events));
-    }
-
-    function renderCalendar() {
-      const calendar = document.getElementById("calendar");
-      const title = document.getElementById("title");
-      if (!calendar) return;
-
-      calendar.innerHTML = "";
-
-      const now = new Date();
-      const year = now.getFullYear();
-      const month = now.getMonth();
-
-      title.textContent = now.toLocaleString("default", {
-        month: "long",
-        year: "numeric"
-      });
-
-      const daysInMonth = new Date(year, month + 1, 0).getDate();
-      const events = getEvents();
-
-      for (let day = 1; day <= daysInMonth; day++) {
-        const key = `${year}-${month + 1}-${day}`;
-        const cell = document.createElement("div");
-        cell.className = "day";
-        cell.innerHTML = `<small>${day}</small>`;
-
-        if (events[key]) {
-          const ev = document.createElement("div");
-          ev.className = "event";
-          ev.textContent = events[key];
-          cell.appendChild(ev);
+        function storageAvailable() {
+            try {
+                const test = "__test__";
+                localStorage.setItem(test, test);
+                localStorage.removeItem(test);
+                return true;
+            } catch {
+                return false;
+            }
         }
 
-        cell.onclick = () => {
-          const text = prompt("Event for " + key, events[key] || "");
-          if (text !== null) {
-            if (text.trim() === "") {
-              delete events[key];
-            } else {
-              events[key] = text.trim();
+        function getEvents() {
+            if (!storageAvailable()) {
+                alert("Storage unavailable in this app context.");
+                return {};
             }
-            saveEvents(events);
-            renderCalendar();
-          }
-        };
+            const raw = localStorage.getItem(STORAGE_KEY);
+            return raw ? JSON.parse(raw) : {};
+        }
 
-        calendar.appendChild(cell);
-      }
-    }
+        function saveEvents(events) {
+            if (!storageAvailable()) return;
+            localStorage.setItem(STORAGE_KEY, JSON.stringify(events));
+        }
 
-    // ---- REGISTER SERVICE WORKER (SAFE)
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("./sw.js");
-    }
-  </script>
+        function renderCalendar() {
+            const calendar = document.getElementById("calendar");
+            const title = document.getElementById("title");
+            if (!calendar) return;
+
+            calendar.innerHTML = "";
+
+            const now = new Date();
+            const year = now.getFullYear();
+            const month = now.getMonth();
+
+            title.textContent = now.toLocaleString("default", {
+                month: "long",
+                year: "numeric"
+            });
+
+            const daysInMonth = new Date(year, month + 1, 0).getDate();
+            const events = getEvents();
+
+            for (let day = 1; day <= daysInMonth; day++) {
+                const key = `${year}-${month + 1}-${day}`;
+                const cell = document.createElement("div");
+                cell.className = "day";
+                cell.innerHTML = `<small>${day}</small>`;
+
+                if (events[key]) {
+                    const ev = document.createElement("div");
+                    ev.className = "event";
+                    ev.textContent = events[key];
+                    cell.appendChild(ev);
+                }
+
+                cell.onclick = () => {
+                    setTimeout(() => {
+                        const current = events[key] || "";
+                        const text = prompt("Event for " + key, current);
+
+                        if (text === null) return;
+
+                        if (text.trim() === "") {
+                            delete events[key];
+                        } else {
+                            events[key] = text.trim();
+                        }
+
+                        saveEvents(events);
+                        renderCalendar();
+                    }, 0);
+                };
+
+
+
+                calendar.appendChild(cell);
+            }
+        }
+
+        // ---- REGISTER SERVICE WORKER (SAFE)
+        if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("./sw.js");
+        }
+    </script>
 </body>
+
 </html>
