--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>VibeCal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#6200ee">
+    <meta name="theme-color" content="#121212">
 </head>
 <body>
     <div id="app">
