--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
             <div class="day-header">Thu</div>
             <div class="day-header">Fri</div>
             <div class="day-header">Sat</div>
-            <div id="calendarDays"></div> </div>
+            <div id="calendarDays"></div>
+        </div>
     </div>
 
     <div id="eventModal" class="modal">
         <div class="modal-content">
-            <h3>New Event</h3>
+            <h3 id="modalDateDisplay">New Event</h3>
             <input type="text" id="eventInput" placeholder="What's the vibe?">
             <div class="color-picker">
                 <div class="color-opt selected" style="background:#bb86fc" data-color="#bb86fc"></div>
